<resources>
    <string name="app_name">Assignment 5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="add_singer">Add singer</string>
    <string name="singer_name">Singer Name</string>
    <string name="add_song">Add Song</string>
    <string name="song_title">Song Title</string>
    <string name="background_image">Background Image</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_cover">Album cover</string>
    <string name="previous_song">Previous song</string>
    <string name="play_controller">PLay controller</string>
    <string name="next_song">Next song</string>
    <string name="_0_00">0:00</string>
    <string name="_3_45">3:45</string>
    <string name="add_album_cover">Add Album Cover</string>
    <string name="add_duration">Add duration</string>
    <string name="song_image">Song Image</string>
    <string name="more">More</string>
    <string name="play">Play</string>
    <string name="add_new_song">Add new song</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="close_song_player">Close song player</string>
    <string name="channel_description">Music player</string>
    <string name="add_url">Add url</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="up_next">Up Next</string>
    <string name="music_icon">music icon</string>
    <string name="close">Close</string>
</resources>